# Uncle-Matts-Project-Manageroo

./: .gitignore  AGENTS.md  BUILD-VALIDATION.json  CONTRIBUTING.md  FINAL-HANDOFF.md  GITHUB_DESCRIPTION.md  GIVE-THIS-TO-YOUR-IDE-AGENT.md  LICENSE  LOCAL_SETUP.md  PUBLISH_TO_GITHUB.md  README.md  SECURITY.md  SHA256SUMS.txt  install.ps1  install.sh  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  verify.yml
docs/: 00_START_HERE.md  AGENT_PROTOCOL.md  ARCHITECTURE.md  CODEX_RUNTIME.md  CONFIG_REFERENCE.md  CONTEXT_COMPILER.md  CREDITS.md  DEPENDENCY_POLICY.md  DETERMINISM.md  DISCOVERY_AND_CAPACITY.md  DOCUMENT_LANE.md  ENFORCEMENT_MATRIX.md  EVIDENCE_RETRIEVAL.md  EXTERNAL_INTEGRATIONS.md  FILE_MANIFEST.md  HOST_AND_TOS_INTEGRATION.md  HOST_INTEGRATION.md  HOST_SKILL_ECOSYSTEM.md  IDE_AGENT_INSTALL_INSTRUCTIONS.md  INSTALLATION.md  LEARNING_LANE.md  LIMITATIONS.md  ONE_SHOT_PROTOCOL.md  OPERATOR_GUIDE.md  PRODUCT_PROOF.md  RECOVERY.md  RESEARCH_CONCLUSIONS.md  REVIEW_REPAIR_LANES.md  SECURITY_THREAT_MODEL.md  SOLO_OPERATOR_MODE.md  STATELESS_ORCHESTRATION.md  TERMINAL_EXPERIENCE.md
dream-cycle-summaries/: 2026-07-24.md
examples/: README.md  product-brief-client-portal.md  product-brief-repair.md
scripts/: finalize_gitnexus.py  install.ps1  install.py  install.sh  package_release.py  release.py  smoke_release_install.py  verify_distribution.py  verify_release.py
skills/skill-vetter/: SKILL.md
src/manageroo/: __init__.py  __main__.py  acceptance.py  artifacts.py  assets.py  branding.py  checks.py  chiptune.py  chiptune_policy.py  clawpatch_batch.py  cli.py  (+69 more)
tests/: __init__.py  test_000_bootstrap.py  test_acceptance_evidence.py  test_artifact_concurrency.py  test_artifact_store.py  test_branding.py  test_brief_builder.py  test_capacity_public_surface.py  test_checks.py  test_chiptune.py  test_clawpatch_batch.py  test_clawpatch_completion_contracts.py  test_clawpatch_regressions.py  test_clawpatch_remaining_regressions.py  test_cli_checks.py  test_cli_entrypoint_smoke.py  test_cli_memory.py  test_cli_next.py  test_cli_release_ready.py  test_cli_setup.py  test_cli_smoke.py  test_cli_solo.py  test_codex_sandbox_fallback.py  test_config.py  test_context.py  test_credits.py  test_decision_regressions.py  test_decision_workflow.py  test_detector.py  test_discovery_cli.py  test_discovery_policy.py  test_discovery_preflight.py  test_document_lane.py  test_entrypoint_safety.py  test_evidence.py  test_evidence_policy.py  test_external_intelligence.py  test_external_loop_library_removed.py  test_external_repair_policy.py  test_external_repair_resume.py  (+64 more)
(+114 files in other folders)
