[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uncle-matts-project-manageroo"
version = "2026.7.19.1"
description = "A local CLI that keeps AI coding agents on task while they build or repair Git repos."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Uncle Matt"}]
keywords = ["coding-agent", "gbrain", "gitnexus", "obsidian", "autoreview", "clawpatch", "codex", "orchestration", "software-delivery", "agent-harness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
manageroo = "manageroo.entrypoint:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manageroo = [
  "assets/schemas/*.json",
  "assets/prompts/*.md",
  "assets/skills/*/SKILL.md",
  "assets/skills/*/*",
  "assets/skills/*/*/*",
  "assets/templates/*",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"